# ozon_api

./: LICENSE  Makefile  example.py  pyproject.toml  requirements.txt
ozon_api/: manager.py
ozon_api/abstraction/: __init__.py  errors.py  pager.py  product_card.py
ozon_api/endpoints/: catalog.py
